--- a/game.html
+++ b/game.html
@@ -35,37 +35,37 @@ td {
 
 <table class="black" align="center" border="4">
   <tr align="center">
-    <td class="black"><img src="red_single.png"></td>
+    <td class="black"><img src="red_plain.png"></td>
     <td class="red"></td>
-    <td class="black"><img src="red_single.png"></td>
+    <td class="black"><img src="red_plain.png"></td>
     <td class="red"></td>
-    <td class="black"><img src="red_single.png"></td>
+    <td class="black"><img src="red_plain.png"></td>
     <td class="red"></td>
-    <td class="black"><img src="red_single.png"></td>
-    <td class="red"></td>
-  </tr>
-  <tr align="center">
-    <td class="red"></td>
-    <td class="black"><img src="red_single.png"></td>
-    <td class="red"></td>
-    <td class="black"><img src="red_single.png"></td>
-    <td class="red"></td>
-    <td class="black"><img src="red_single.png"></td>
-    <td class="red"></td>
-    <td class="black"><img src="red_single.png"></td>
-  </tr>
-  <tr align="center">
-    <td class="black"><img src="red_single.png"></td>
-    <td class="red"></td>
-    <td class="black"><img src="red_single.png"></td>
-    <td class="red"></td>
-    <td class="black"><img src="red_single.png"></td>
-    <td class="red"></td>
-    <td class="black"><img src="red_single.png"></td>
+    <td class="black"><img src="red_plain.png"></td>
     <td class="red"></td>
   </tr>
   <tr align="center">
     <td class="red"></td>
+    <td class="black"><img src="red_plain.png"></td>
+    <td class="red"></td>
+    <td class="black"><img src="red_plain.png"></td>
+    <td class="red"></td>
+    <td class="black"><img src="red_plain.png"></td>
+    <td class="red"></td>
+    <td class="black"><img src="red_plain.png"></td>
+  </tr>
+  <tr align="center">
+    <td class="black"><img src="red_plain.png"></td>
+    <td class="red"></td>
+    <td class="black"><img src="red_plain.png"></td>
+    <td class="red"></td>
+    <td class="black"><img src="red_plain.png"></td>
+    <td class="red"></td>
+    <td class="black"><img src="red_plain.png"></td>
+    <td class="red"></td>
+  </tr>
+  <tr align="center">
+    <td class="red"></td>
     <td class="black"></td>
     <td class="red"></td>
     <td class="black"></td>
@@ -86,33 +86,33 @@ td {
   </tr>
   <tr align="center">
     <td class="red"></td>
-    <td class="black"><img src="black_single.png"></td>
+    <td class="black"><img src="black_plain.png"></td>
     <td class="red"></td>
-    <td class="black"><img src="black_single.png"></td>
+    <td class="black"><img src="black_plain.png"></td>
     <td class="red"></td>
-    <td class="black"><img src="black_single.png"></td>
+    <td class="black"><img src="black_plain.png"></td>
     <td class="red"></td>
-    <td class="black"><img src="black_single.png"></td>
+    <td class="black"><img src="black_plain.png"></td>
   </tr>
   <tr align="center">
-    <td class="black"><img src="black_single.png"></td>
+    <td class="black"><img src="black_plain.png"></td>
     <td class="red"></td>
-    <td class="black"><img src="black_single.png"></td>
+    <td class="black"><img src="black_plain.png"></td>
     <td class="red"></td>
-    <td class="black"><img src="black_single.png"></td>
+    <td class="black"><img src="black_plain.png"></td>
     <td class="red"></td>
-    <td class="black"><img src="black_single.png"></td>
+    <td class="black"><img src="black_plain.png"></td>
     <td class="red"></td>
   </tr>
   <tr align="center">
     <td class="red"></td>
-    <td class="black"><img src="black_single.png"></td>
+    <td class="black"><img src="black_plain.png"></td>
     <td class="red"></td>
-    <td class="black"><img src="black_single.png"></td>
+    <td class="black"><img src="black_plain.png"></td>
     <td class="red"></td>
-    <td class="black"><img src="black_single.png"></td>
+    <td class="black"><img src="black_plain.png"></td>
     <td class="red"></td>
-    <td class="black"><img src="black_single.png"></td>
+    <td class="black"><img src="black_plain.png"></td>
   </tr>
 </table>
 
