--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <h3>GamePlay:</h3>
   </div>
   <div>
-    This is a two player game. Choose your colors, and enter your names on the next page.
+    This is a two player game. Choose your colors and enter your names on the next page.
     This game is played by clicking first on the checker that you wish to move, and then
     clicking on the space you wish to move it to. Only single jumps are allowed. Your
-    pieces may only move forward until they have reached your oponent's side of the board,
+    pieces may only move forward until they have reached the other side of the board,
     where they become kings and can then move forward or backward.
   </div>
   <div>
@@ -47,7 +47,7 @@
     <h3>Here is my preliminary software design:</h3>
   </div>
   <div>
-
+    This is where I'll type stuff about the design.
   </div>
 </body>
 </html>
