--- a/game_in_progress.html
+++ b/game_in_progress.html
@@ -33,51 +33,11 @@
 
   <table class="black" align="center" border="4">
     <tr align="center">
-      <td class="black"><img src="red_single.png"></td>
+      <td class="black"><img src="red_plain.png"></td>
       <td class="red"></td>
-      <td class="black"></td>
+      <td class="black"><img src="red_plain.png"></td>
       <td class="red"></td>
-      <td class="black"><img src="black_king.png"></td>
-      <td class="red"></td>
-      <td class="black"></td>
-      <td class="red"></td>
-    </tr>
-    <tr align="center">
-      <td class="red"></td>
-      <td class="black"><img src="red_single.png"></td>
-      <td class="red"></td>
-      <td class="black"></td>
-      <td class="red"></td>
-      <td class="black"><img src="red_single.png"></td>
-      <td class="red"></td>
-      <td class="black"></td>
-    </tr>
-    <tr align="center">
-      <td class="black"></td>
-      <td class="red"></td>
-      <td class="black"></td>
-      <td class="red"></td>
-      <td class="black"></td>
-      <td class="red"></td>
-      <td class="black"></td>
-      <td class="red"></td>
-    </tr>
-    <tr align="center">
-      <td class="red"></td>
-      <td class="black"><img src="red_single.png"></td>
-      <td class="red"></td>
-      <td class="black"></td>
-      <td class="red"></td>
-      <td class="black"><img src="black_king.png"></td>
-      <td class="red"></td>
-      <td class="black"><img src="red_king.png"></td>
-    </tr>
-    <tr align="center">
-      <td class="black"><img src="black_single.png"></td>
-      <td class="red"></td>
-      <td class="black"></td>
-      <td class="red"></td>
-      <td class="black"></td>
+      <td class="black"><img src="black_star.png"></td>
       <td class="red"></td>
       <td class="black"></td>
       <td class="red"></td>
@@ -88,29 +48,69 @@
       <td class="red"></td>
       <td class="black"></td>
       <td class="red"></td>
-      <td class="black"></td>
+      <td class="black"><img src="red_plain.png"></td>
       <td class="red"></td>
-      <td class="black"><img src="black_single.png"></td>
+      <td class="black"></td>
     </tr>
     <tr align="center">
       <td class="black"></td>
       <td class="red"></td>
-      <td class="black"><img src="red_king.png"></td>
+      <td class="black"></td>
       <td class="red"></td>
       <td class="black"></td>
       <td class="red"></td>
-      <td class="black"><img src="black_single.png"></td>
+      <td class="black"></td>
       <td class="red"></td>
     </tr>
     <tr align="center">
       <td class="red"></td>
-      <td class="black"><img src="red_king.png"></td>
+      <td class="black"><img src="red_plain.png"></td>
       <td class="red"></td>
       <td class="black"></td>
       <td class="red"></td>
-      <td class="black"><img src="black_single.png"></td>
+      <td class="black"><img src="black_star.png"></td>
+      <td class="red"></td>
+      <td class="black"><img src="red_star.png"></td>
+    </tr>
+    <tr align="center">
+      <td class="black"><img src="black_plain.png"></td>
       <td class="red"></td>
       <td class="black"></td>
+      <td class="red"></td>
+      <td class="black"></td>
+      <td class="red"></td>
+      <td class="black"></td>
+      <td class="red"></td>
+    </tr>
+    <tr align="center">
+      <td class="red"></td>
+      <td class="black"></td>
+      <td class="red"></td>
+      <td class="black"></td>
+      <td class="red"></td>
+      <td class="black"></td>
+      <td class="red"></td>
+      <td class="black"><img src="black_plain.png"></td>
+    </tr>
+    <tr align="center">
+      <td class="black"></td>
+      <td class="red"></td>
+      <td class="black"><img src="red_star.png"></td>
+      <td class="red"></td>
+      <td class="black"></td>
+      <td class="red"></td>
+      <td class="black"></td>
+      <td class="red"></td>
+    </tr>
+    <tr align="center">
+      <td class="red"></td>
+      <td class="black"><img src="red_star.png"></td>
+      <td class="red"></td>
+      <td class="black"></td>
+      <td class="red"></td>
+      <td class="black"><img src="black_plain.png"></td>
+      <td class="red"></td>
+      <td class="black"><img src="black_plain.png"></td>
     </tr>
   </table>
 
