--- a/game_in_progress.html
+++ b/game_in_progress.html
@@ -16,6 +16,9 @@
     .black {
       background:black;
     }
+    font {
+      font-family:georgia;
+    }
   </style>
 
   <!--<form method="POST" action="http://requestb.in/1ie3eg91">-->
