--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <style>
     body {
-      font-family:trebuchet;
+      font-family:georgia;
       font-size:150%;
       padding-left:75px;
       padding-right:75px;
@@ -19,10 +19,14 @@
   <style>
     div {
       margin:10px;
-
     }
-
   </style>
+  <div>
+    <img src="checkers.png" width="20%">
+  </div>
+  <div>
+    (Image courtesy of vintagetoys.com)
+  </div>
   <div>
     <h3>This is the description page for Joey's html checkers game.</h3>
   </div>
