Added Preliminary Software Design
1/19/15

--- a/game_in_progress.html
+++ b/game_in_progress.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <h1 align="center">Joey Cannon's Game of Checkers (HTML Version)</h1>
+  <h1 align="center"><font>Joey Cannon's Game of Checkers (HTML Version)</font></h1>
 </head>
 <body style="background:lightblue">
   <style>
@@ -17,7 +17,7 @@
       background:black;
     }
     font {
-      font-family:georgia;
+      font-family:calibri;
     }
   </style>
 
