--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <style>
     body {
-      font-family:georgia;
+      font-family:calibri;
       font-size:150%;
       padding-left:75px;
       padding-right:75px;
@@ -11,9 +11,12 @@
     div {
       text-align:center;
     }
+    #software_design {
+      text-align:left;
+    }
   </style>
 
-  <h1 align="center">Joey Cannon's Game Description Page</h1>
+<h1 align="center">Joey Cannon's Game Description Page</h1>
 </head>
 <body style="background:lightblue">
   <style>
@@ -47,11 +50,24 @@
   <div style="font-size:150%">
     <a target="_new" href="game_in_progress.html">Click here to go to the game!</a>
   </div>
-  <div>
-    <h3>Here is my preliminary software design:</h3>
+  <hr size="5px">
+  <div id="software_design">
+    <h3><u>Preliminary software design:</u></h3>
   </div>
-  <div>
-    This is where I'll type stuff about the design.
+  <div id="software_design">
+    <b><u>Variables:</u></b> <br/>
+    Player 1 Name <br/>
+    Player 2 Name <br/>
+    Starting number of checkers (both) = 12 (const) <br/>
+    Current number of checkers (red and black) <br/>
+    Current number of kings (red and black) <br/>
+    Position (maybe have x and y position, or just give each valid square a name)
+  </div>
+  <div id="software_design">
+    <b><u>Functions:</u></b><br/>
+    Move Function - Detect click and drag, or just allow user to click on a checker, and then click on a space to move it to.<br/>
+    Jump Function - May use part of the move function to validate the movement, but will also get rid of the oponent's checker.<br/>
+    Win Function - Display a win text when one player's checker count reaches zero.
   </div>
 </body>
 </html>
