--- a/game_in_progress.html
+++ b/game_in_progress.html
@@ -19,9 +19,16 @@
     font {
       font-family:calibri;
     }
+    img {
+      draggable:true;
+    }
   </style>
 
-  <!--<form method="POST" action="http://requestb.in/1ie3eg91">-->
+  <script>
+  
+  </script>
+
+  <!----><form method="POST" action="http://requestb.in/1ie3eg91">
   <div align="center"><font size="4">
     <label name="player1">Player 1 (red): </label>
     <input type="text" name="player1">
