--- a/index.html
+++ b/index.html
@@ -69,5 +69,6 @@
     Jump Function - May use part of the move function to validate the movement, but will also get rid of the oponent's checker.<br/>
     Win Function - Display a win text when one player's checker count reaches zero.
   </div>
+  <hr size="5px">
 </body>
 </html>
