--- a/Assignment 01/game_in_progress.html
+++ b/Assignment 01/game_in_progress.html
@@ -28,7 +28,7 @@
 
   </script>
 
-  <form method="POST" action="http://requestb.in/1ie3eg91">
+  <!----><form method="POST" action="http://requestb.in/1ie3eg91">
   <div align="center"><font size="4">
     <label name="player1">Player 1 (red): </label>
     <input type="text" name="player1">
@@ -130,86 +130,3 @@
 </form>
 </body>
 </html>
-
-<!--
-<tr align="center">
-  <td class="black"><img src="red_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="red_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="red_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="red_plain.png"></td>
-  <td class="red"></td>
-</tr>
-<tr align="center">
-  <td class="red"></td>
-  <td class="black"><img src="red_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="red_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="red_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="red_plain.png"></td>
-</tr>
-<tr align="center">
-  <td class="black"><img src="red_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="red_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="red_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="red_plain.png"></td>
-  <td class="red"></td>
-</tr>
-<tr align="center">
-  <td class="red"></td>
-  <td class="black"></td>
-  <td class="red"></td>
-  <td class="black"></td>
-  <td class="red"></td>
-  <td class="black"></td>
-  <td class="red"></td>
-  <td class="black"></td>
-</tr>
-<tr align="center">
-  <td class="black"></td>
-  <td class="red"></td>
-  <td class="black"></td>
-  <td class="red"></td>
-  <td class="black"></td>
-  <td class="red"></td>
-  <td class="black"></td>
-  <td class="red"></td>
-</tr>
-<tr align="center">
-  <td class="red"></td>
-  <td class="black"><img src="black_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="black_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="black_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="black_plain.png"></td>
-</tr>
-<tr align="center">
-  <td class="black"><img src="black_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="black_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="black_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="black_plain.png"></td>
-  <td class="red"></td>
-</tr>
-<tr align="center">
-  <td class="red"></td>
-  <td class="black"><img src="black_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="black_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="black_plain.png"></td>
-  <td class="red"></td>
-  <td class="black"><img src="black_plain.png"></td>
-</tr>
--->
