New code with javascript
1/28/15

--- a/Assignment 01/game.html
+++ b/Assignment 01/game.html
@@ -27,9 +27,9 @@
   <form method="POST" action="http://requestb.in/1ie3eg91">
   <div align="center"><font size="4">
     <label name="player1">Player 1 (red): </label>
-    <input type="text" name="player1">
+    <input type="text" id="player1Input" name="player1">
     <label name="player2">Player 2 (black): </label>
-    <input type="text" name="player2">
+    <input type="text" id="player2Input" name="player2">
     <input type="submit" value="Start Game!"><br/><br/></font>
   </div>
 
