--- a/Assignment 02/index.html
+++ b/Assignment 02/index.html
@@ -1,31 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-    body {
-      font-family:calibri;
-      font-size:150%;
-      padding-left:75px;
-      padding-right:75px;
-    }
-
-    div {
-      text-align:center;
-    }
-
-    #software_design {
-      text-align:left;
-    }
-  </style>
-
-<h1 align="center">Joey Cannon's Game Description Page</h1>
+  <title>Checkers</title>
+  <link rel="stylesheet" type="text/css" href="game.css" media="screen" />
+  <link rel="shortcut icon" href="favicon.ico" />
+  <h1 align="center">Joey Cannon's Game Description Page</h1>
 </head>
 <body style="background:lightblue">
-  <style>
-    div {
-      margin:10px;
-    }
-  </style>
   <div>
     <img src="checkers.png" width="20%">
   </div>
@@ -50,7 +31,7 @@
     page for Checkers (also called "Draughts").
   </div>
   <div style="font-size:150%">
-    <a target="_new" href="game_in_progress.html">Click here to go to the game!</a>
+    <a target="_new" href="game.html">Click here to go to the game!</a>
   </div>
   <hr size="5px">
   <div id="software_design">
